syntax = "proto2";
package rpc;
option go_package = "initialthree/protocol/ss/rpc";

import "cs/proto/message/errerror.proto";

message teamJoinReply_req {
    optional bool agree = 1;
    optional uint64 agreeID = 2;
    required uint32 teamID = 3;
    required uint64 mineID = 4;
}

message teamJoinReply_resp {
    required message.ErrCode errCode = 1;
}